# salesbench-prime

./: .gitignore  .pre-commit-config.yaml  README.md  notes.md  program.md  pyproject.toml  results.tsv  secrets.env.example
blog/: salesbench.md
configs/: endpoints.py  endpoints.toml
configs/curriculum/: stage1-2-leads.toml  stage2-4-leads.toml  stage3-8-leads.toml  stage4-20-leads.toml
configs/eval/: README.md  eval-trained-analytical.toml  eval-trained-default.toml  eval-trained-impulsive.toml  eval-trained-skeptical.toml  eval-untrained-default.toml  validate-v42-tiny.toml
configs/lab/: salesbench.toml
environments/: AGENTS.md
environments/salesbench/: README.md  archetypes.py  catalog.py  config.py  dataset.py  generator.py  models.py  policy.py  pyproject.toml  rewards.py  runtime.py  salesbench.py  test_salesbench.py  tools.py
paper/: REVIEW_AND_PLAN.md  salesbench.bib  salesbench_wab 2.fls  salesbench_wab.aux  salesbench_wab.bbl  salesbench_wab.blg  salesbench_wab.fdb_latexmk  salesbench_wab.fls  salesbench_wab.out  salesbench_wab.tex
tools/: aggregate_eval_results.py  generate_blog_charts.py  run_eval_matrix.sh  test_buyer_variants.py
tools/results/: buyer_ablation_v2_10leads.json  buyer_ablation_v3_5leads.json  eval_matrix_runs.txt  eval_matrix_summary.json  eval_matrix_summary.md
tools/results/prime-eval/: summary.json
