[project]
name = "salesbench-prime"
version = "0.1.0"
description = "SalesBench Prime RL harness for long-horizon agent-to-agent sales evaluation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "verifiers>=0.1.11.dev0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=9.0.0",
    "ruff>=0.14.0",
]
