[project]
name = "salesbench"
description = "Stateful, tool-use sales simulation environment for Prime Lab (verifiers)."
tags = ["sales", "tool-use", "rl", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.9.post3",
    "datasets>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "salesbench.py",
    "catalog.py",
    "config.py",
    "dataset.py",
    "generator.py",
    "models.py",
    "policy.py",
    "rewards.py",
    "runtime.py",
    "tools.py",
    "README.md",
    "pyproject.toml",
]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
state_columns = ["episode_summary"]
