[project]
name = "salesbench"
description = "Stateful, tool-use sales simulation environment for Prime Lab (verifiers)."
tags = ["sales", "tool-use", "rl", "train", "eval"]
version = "0.2.1"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.10",
    "datasets>=4.0.0",
    "openai>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "salesbench.py",
    "archetypes.py",
    "catalog.py",
    "config.py",
    "dataset.py",
    "generator.py",
    "models.py",
    "policy.py",
    "rewards.py",
    "runtime.py",
    "tools.py",
]

[tool.verifiers.eval]
num_examples = -1
rollouts_per_example = 4
